[package]
name = "deeprender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# eframe = "0.22.0"
eframe = { version = "0.21.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
image = "0.24.6"
rand = "0.8.5"
ray-rust = { git = "https://github.com/msakuta/ray-rust.git" }
# ray-rust = { path = "../ray-rust" }

wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["Storage", "Window"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
